<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        android:src="@drawable/daily_round_logo"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:id="@+id/iV_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iV_logo"
        android:text="@string/log_in"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:id="@+id/tV_login_text"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tV_login_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="30dp"
        android:paddingLeft="20dp"
        android:inputType="textEmailAddress"
        android:paddingRight="20dp"
        android:maxLines="1"
        android:hint="@string/hint_username"
        android:background="@drawable/border_edit_text"
        android:id="@+id/eT_username"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/eT_username"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="30dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:maxLines="1"
        android:hint="@string/hint_password"
        android:background="@drawable/border_edit_text"
        android:id="@+id/eT_password"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/eT_password"
        app:layout_constraintRight_toRightOf="@id/eT_password"
        app:layout_constraintTop_toBottomOf="@id/eT_password"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/daily_marrow_red"
        android:textColor="@color/white"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="20dp"
        android:id="@+id/btn_login"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="@id/btn_login"
        app:layout_constraintRight_toRightOf="@id/btn_login"
        app:layout_constraintTop_toBottomOf="@id/btn_login">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textColor="@color/daily_marrow_red"
            android:textStyle="bold"
            android:id="@+id/tV_register"
            android:text="@string/register"
            android:textSize="16sp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>