<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration.RegistrationActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/back"
        android:layout_margin="20dp"
        android:id="@+id/iV_back"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="50dp"
        android:id="@+id/tV_register"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tV_register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="30dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:hint="@string/email_id"
        android:background="@drawable/border_edit_text"
        android:id="@+id/eT_email_id"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/eT_email_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="30dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:maxLines="1"
        android:hint="@string/password"
        android:background="@drawable/border_edit_text"
        android:id="@+id/eT_password"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/eT_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="30dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:maxLines="1"
        android:hint="@string/confirm_password"
        android:background="@drawable/border_edit_text"
        android:id="@+id/eT_confirm_password"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/eT_confirm_password"
        app:layout_constraintRight_toRightOf="@id/eT_confirm_password"
        app:layout_constraintTop_toBottomOf="@id/sP_countries"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/daily_marrow_red"
        android:textColor="@color/white"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="20dp"
        android:id="@+id/btn_register"/>

    <Spinner
        android:id="@+id/sP_countries"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:background="@drawable/border_edit_text"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/eT_confirm_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>